Align arrow with multi-line header in news widget on mobile and desktop && fix some code alignments
[ci skip]

--- a/app/assets/stylesheets/content/_news.sass
+++ b/app/assets/stylesheets/content/_news.sass
@@ -33,14 +33,23 @@
   @include text-shortener
   margin-bottom: 5px
 
+.summary
+  font-style: italic
+
 .news-author
-    font-size: 0.8rem
-    color: $gray-dark
-    display: block
+  font-size: 0.8rem
+  color: $gray-dark
+  display: block
+  padding: 5px 0 5px 40px
+  line-height: 1.25
 
 .news-author-avatar
-    margin-right: 5px
-    float: left
+  margin-right: 5px
+  float: left
 
+.news-project
+  line-height: 1
 
-   
+@media screen and (max-width: 679px)
+  .news-author
+    padding-left: 0
